bugfix: mobile page map too high -> scrolling failures

--- a/app/app_mobile.css
+++ b/app/app_mobile.css
@@ -8,8 +8,9 @@ html,body{
 }
 
 #map{
-
-    top:100px;
+    height: -webkit-calc(100% - 100px);
+    height: -moz-calc(100% - 100px);
+    height: calc(100% - 100px);
 }
 
 #inputarea{
